# ttfautohint-py

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  README.rst  appveyor.yml  config.sh  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: build.sh  ci.yml  wheels.yml
ci/: docker-fixes.sh  env_vars.sh  multibuild_config.sh  osx-fixes.sh  windows-fixes.sh
src/c/: Makefile  apply_patches.sh  empty.c  freetype2.patch  harfbuzz.patch  ttfautohint.def  ttfautohint.patch
src/python/ttfautohint/: __init__.py  __main__.py  _compat.py  _version.py  cli.py  errors.py  info.py  options.py
tests/: test_info.py  test_options.py  test_ttfautohint.py
