[download]
freetype_version = 2.13.3
freetype_sha256 = 0550350666d427c74daeb85d5ac7bb353acba5f76956395995311a9c6f063289
harfbuzz_version = 8.5.0
harfbuzz_sha256 = 77e4f7f98f3d86bf8788b53e6832fb96279956e1c3961988ea3d4b7ca41ddc27
ttfautohint_version = 1.8.4
ttfautohint_sha256 = 8a876117fa6ebfd2ffe1b3682a9a98c802c0f47189f57d3db4b99774206832e1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 2.8
testpaths = 
	tests
addopts = 
	-v
	-r a
filterwarnings =
    ignore:tostring.*is deprecated:DeprecationWarning
    ignore:fromstring.*is deprecated:DeprecationWarning
